# Idioms_spotter

./: .gitignore  Dockerfile  Dockerfile-cpu  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements-prod-cpu.txt  requirements.txt  run_api.sh  run_app.sh  setup.cfg  train.sh
data/processed/: .gitignore
docker/api/: Dockerfile
docker/frontend/: Dockerfile
models/: .gitignore
notebooks/: data_preparation.ipynb  tokenization_helper.py  train_idioms_xlm_roberta.ipynb  train_pie_ner.ipynb
scripts/: download_model_from_hub.py  download_raw_datasets.sh  eval.sh  train.sh
scripts/model/: arguments.py  helper.py  model.py  model_helper.py  report_helper.py  train.py  train_helper.py
src/: helper.py  train.py
src/api/: Dockerfile-api-cpu  download_model_from_hub.py  main.py  requirements-api-cpu.txt  server.py
src/app/: Dockerfile-app  app.py  helper.py  requirements-app.txt
src/model/: helper.py  train.py
src/scripts/: download_model_from_hub.py
