[tool.poetry]
name = "idioms_spotter"
version = "0.1.0"
description = "Transformers app for identification English potentials idiomatic expressions (PIE) in text."
authors = ["Gooogr"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.16"

[tool.poetry.dev-dependencies]

[tool.poetry.group.prod.dependencies]
transformers = "4.27.4"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
nltk = "3.8.1"
uvicorn = "0.15.0"
fastapi = "0.70.0"

[tool.poetry.group.dev.dependencies]
transformers = {version = "*", extras = ["sentencepiece"]}
torch = "2.0.0"
nltk = "3.8.1"
uvicorn = "0.15.0"
fastapi = "0.70.0"
datasets = "^2.11.0"
seqeval = "^1.2.2"
seaborn = "^0.12.2"
wandb = "^0.14.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
